hw04/k8s/03-manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw04-deployment
  labels:
    app: hw04-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw04-app
  template:
    metadata:
      labels:
        app: hw04-app
    spec:
      containers:
        - name: hw04-app
          image: a1exander78/hw04:latest
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
            failureThreshold: 3
